        ============== rnumber release 1.11.1 (v1_11_1) on SunOS ==============

2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>

	*  perl: There is a problem with large integers (msb being set) not 
	   being considered to be integers by perl's SvIOK function. This is
	   what integerp uses to detect whether a variable is an integer or
	   not. I have resolved this by adding a new predicate numericp and
	   using that to determine whether a variable is numeric or not.

        ============== rnumber release 1.10.4 (v1_10_4) on SunOS ==============

        ============== rnumber release 1.10.3 (v1_10_3) on SunOS ==============

2002-11-22  Todd Dukes  <Todd.Dukes@motorola.com>

	* bug fixes and more simplification of Perl functions.

        ============== rnumber release 1.10.2 (v1_10_2) on SunOS ==============

2002-11-22  Todd Dukes  <Todd.Dukes@motorola.com>

	* Minor function name changes for perl
	* exported perl functions.

        ============== rnumber release 1.10.1 (v1_10_1) on SunOS ==============

2002-11-22  Todd Dukes  <Todd.Dukes@motorola.com>

	* simplified perl bindings.
	* fixed bug with bigloo version number.

        =============== rnumber release 1.9.1 (v1_9_1) on SunOS ===============

        =============== rnumber release 1.9.1 (v1_9_1) on SunOS ===============

2002-11-21  Todd Dukes  <Todd.Dukes@motorola.com>

	* added perl bindings

        =============== rnumber release 1.8.6 (v1_8_6) on SunOS ===============

        =============== rnumber release 1.8.5 (v1_8_5) on SunOS ===============

        =============== rnumber release 1.8.5 (v1_8_5) on SunOS ===============

        =============== rnumber release 1.8.5 (v1_8_5) on Linux ===============

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================

        ================ rnumber release 1.8.5 (v1_8_5) on Linux================
