@@ -1,3 +1,7 @@
+2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>
+
+	*  perl: changed numericp to include both SvIOK and SvNOK.
+
         ============== rnumber release 1.11.1 (v1_11_1) on SunOS ==============
 
 2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>
